# baseband

./: .flake8  .gitignore  .readthedocs.yml  .rtd-environment.yml  .travis.yml  .zenodo.json  AUTHORS.rst  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_cron_monthly.yml  ci_workflows.yml
baseband/: __init__.py  _astropy_init.py  conftest.py  core.py  formats.py
baseband/asp/: __init__.py  base.py  block_header.py  file_header.py  frame.py  header.py  notes  payload.py
baseband/asp/tests/: test_asp.py
baseband/base/: __init__.py  base.py  encoding.py  file_info.py  frame.py  header.py  multifile.py  offsets.py  payload.py  sequentialfile.py  utils.py
baseband/base/tests/: test_base.py  test_file_info.py  test_header_parser.py  test_multifile.py  test_offsets.py  test_opener.py  test_sequentialfile.py  test_utils.py
baseband/dada/: __init__.py  base.py  frame.py  header.py  payload.py
baseband/dada/tests/: test_dada.py
baseband/data/: __init__.py  sample.dada  sample.vdif  sample_16track.m4  sample_32track.m4  sample_32track_fanout2.m4  sample_64track_fanout2.m4  sample_64track_fanout2_ft.m4  sample_asp.asp  sample_blc.raw  sample_bps1.vdif  sample_drao_corrupted.vdif  sample_gsb.timestamp  sample_meerkat.dada  sample_mkbf.dada  sample_puppi.raw  sample_vegas.raw  sample_vlbi.vdif
baseband/data/gsb/: sample_gsb_phased.timestamp  sample_gsb_rawdump.timestamp
baseband/gsb/: __init__.py  base.py  file_info.py  frame.py  header.py  payload.py
baseband/gsb/tests/: test_gsb.py
baseband/guppi/: __init__.py  base.py  file_info.py  frame.py  header.py  payload.py
baseband/guppi/tests/: test_corrupt_files.py  test_guppi.py
baseband/helpers/: sequentialfile.py
baseband/helpers/tests/: test_sequentialfile.py
baseband/io/: __init__.py
baseband/kotekan/: __init__.py  base.py  frame.py  header.py  payload.py
baseband/mark4/: __init__.py  base.py  file_info.py  frame.py  header.py  payload.py
baseband/mark4/tests/: test_corrupt_files.py  test_mark4.py
baseband/mark5b/: __init__.py  base.py  file_info.py  frame.py  header.py  payload.py
baseband/mark5b/tests/: test_corrupt_files.py  test_mark5b.py
baseband/tasks/: __init__.py
baseband/tests/: __init__.py  coveragerc  sample.m4  sample.m5b  sample_arochime.vdif  sample_mwa.vdif  setup_package.py  test_conversion.py  test_core.py  test_dada.py  test_entry_points.py  test_file_info.py  test_formats.py  test_gsb.py  test_mark4.py  test_mark5b.py  test_sequential_baseband.py  test_vdif.py  test_vlbi_base.py  test_vlbi_helpers.py
baseband/vdif/: __init__.py  base.py  file_info.py  frame.py  header.py  header_FUNC.py  header_function.py  mytest.py  payload.py
baseband/vdif/tests/: test_corrupt_files.py  test_vdif.py
baseband/vlbi_base/: __init__.py  base.py  encoding.py  file_info.py  frame.py  header.py  offsets.py  payload.py  utils.py
baseband/vlbi_base/tests/: test_opener.py  test_utils.py  test_vlbi_base.py
docs/: authors_for_sphinx.rst  changelog.rst  conf.py  index.rst  install.rst  license.rst  nitpick-exceptions
docs/asp/: index.rst
docs/base/: index.rst
docs/baseband/: index.rst  install.rst  new_edv_tutorial.rst
docs/baseband/dada/: index.rst
docs/baseband/gsb/: index.rst
docs/baseband/helpers/: index.rst
docs/baseband/mark4/: index.rst
docs/baseband/mark5b/: index.rst
docs/baseband/tutorials/: format_conversion.rst  frame_io.rst  getting_started.rst  glossary.rst  glossary_substitutions.rst  new_edv.rst  new_format_tutorial.rst
docs/baseband/vdif/: index.rst
docs/baseband/vlbi_base/: index.rst
docs/dada/: header.rst  index.rst
docs/data/: index.rst
docs/gsb/: index.rst
docs/guppi/: index.rst
docs/helpers/: index.rst
docs/mark4/: index.rst
docs/mark5b/: index.rst
docs/tutorials/: getting_started.rst  glossary_substitutions.rst  new_edv.rst  new_format.rst  performance_tips.rst  release_procedure.rst  using_baseband.rst
docs/vdif/: index.rst
docs/vlbi_base/: index.rst
licenses/: README.rst
