[metadata]
name = baseband
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440)
version = 3.1.1
author = Marten H. van Kerkwijk, Chenchong Zhu
author_email = mhvk@astro.utoronto.ca
license = GNU GPL v3+
license_file = LICENSE
url = https://github.com/mhvk/baseband
project_urls =
    Documentation = https://baseband.readthedocs.io
description = A package for radio baseband I/O
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = mhvk/baseband
python_requires = ">=3.5"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
# install_requires = astropy; scipy; matplotlib
install_requires = astropy>=3.0
zip_safe = False
use_2to3 = False

[options.package_data]
baseband = data/*, data/gsb/*
baseband.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.1
norecursedirs = build docs/_build
doctest_plus = enabled
filterwarnings =
  error
  ignore:::pytest_doctestplus

[ah_bootstrap]
auto_use = True

[flake8]
ignore=
    # missing whitespace around arithmetic operator
    E226,
    # line break before binary operator (have to choose before or after),
    W503
exclude =
    # part of astropy affilliated package template, not our worry.
    baseband/conftest.py,baseband/version.py,baseband/__init__.py,
    baseband/_astropy_init.py,
    docs/conf.py,
    ah_bootstrap.py,setup.py,ez_setup.py,
    astropy_helpers,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses

[pycodestyle]
exclude =
    # part of astropy affilliated package template, not our worry.
    baseband/conftest.py,baseband/version.py,baseband/__init__.py,
    baseband/_astropy_init.py,
    docs/conf.py,
    ah_bootstrap.py,setup.py,ez_setup.py,
    astropy_helpers,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses
