[metadata]
name = baseband
author = Marten H. van Kerkwijk, Chenchong Zhu
author_email = mhvk@astro.utoronto.ca
license = GNU GPL v3+
license_file = LICENSE
url = https://github.com/mhvk/baseband
project_urls =
    Documentation = https://baseband.readthedocs.io
description = A package for radio baseband I/O
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = mhvk/baseband

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy>=4.0
    numpy>=1.17
    entrypoints

[options.entry_points]
baseband.io =
    dada = baseband.dada
    guppi = baseband.guppi
    mark4 = baseband.mark4
    mark5b = baseband.mark5b
    vdif = baseband.vdif
    gsb = baseband.gsb

[options.extras_require]
all =
    baseband-tasks[all]
test =
    pytest-astropy-header
    pytest-doctestplus
    pytest-openfiles
cov =
    pytest-cov
docs =
    sphinx-astropy

[options.package_data]
baseband = data/*, data/gsb/*

[tool:pytest]
testpaths = "baseband" "docs"
astropy_header = true
astropy_header_packages =
    astropy
    numpy
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst --doctest-ignore-import-errors
filterwarnings =
  error
  ignore:::pytest_doctestplus
  ignore::DeprecationWarning:baseband.vlbi_base
  ignore:numpy.ufunc size changed:RuntimeWarning
  
[coverage:run]
omit =
    baseband/_astropy_init*
    baseband/conftest.py
    baseband/*setup_package*
    baseband/tests/*
    baseband/*/tests/*
    baseband/extern/*
    baseband/version*
    */baseband/_astropy_init*
    */baseband/conftest.py
    */baseband/*setup_package*
    */baseband/tests/*
    */baseband/*/tests/*
    */baseband/extern/*
    */baseband/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
ignore=
    # missing whitespace around arithmetic operator
    E226,
    # line break before binary operator (have to choose before or after),
    W503
exclude =
    # part of astropy affilliated package template, not our worry.
    baseband/conftest.py,baseband/version.py,baseband/__init__.py,
    baseband/_astropy_init.py,
    docs/conf.py,
    setup.py,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses

[pycodestyle]
exclude =
    # part of astropy affilliated package template, not our worry.
    baseband/conftest.py,baseband/version.py,baseband/__init__.py,
    baseband/_astropy_init.py,
    docs/conf.py,
    setup.py,
    # standard things to ignore
    __pycache__,build,dist,htmlcov,licenses
